# cxx-call-rust

./: .clangd  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.sh
cmake/: BuildCargo.cmake
crates/cxx-bindings/: Cargo.toml  build.rs
crates/cxx-bindings/src/: lib.rs
crates/my-crate/: Cargo.toml
crates/my-crate/src/: lib.rs
cxx/: CMakeLists.txt
cxx/include/: Color.hpp  MyButton.hpp  Precompiled.hpp
cxx/src/: MainWindow.cpp  MyButton.cpp  main.cpp
include/: MainWindow.hpp  MyButton.hpp  Precompiled.hpp
src/: main.cpp
